# Hermes

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  README.md  VALIDATION.md  compile_flags.txt
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/audio_core/: main.cpp
app/audio_core/abox/: CMakeLists.txt  abox_atomic.h  abox_event.h  abox_graph.c  abox_node.h  abox_nodes.c  abox_nodes.h  abox_routing.c  abox_selftest.c  abox_vdma.c  abox_vdma.h  buffer_pipeline.c  buffer_pipeline.h  harness_offline.c  param_store.h  reference_manager.c  reference_manager.h  worker_pool.c  worker_pool.h
app/audio_core/abox/nodes/: aec_node.c  beamform_node.c  capgate_node.c  dmx_node.c  node_common.c  node_common.h  ses_node.c  src_node.c
app/audio_core/dsp/: CMakeLists.txt  Chain.cpp  Chain.hpp  ModeControl.hpp  Node.hpp  NodeFactory.cpp  NodeFactory.hpp
app/audio_core/dsp/nodes/: AecNode.hpp  BeamformNode.hpp  ChannelMixNode.hpp  FnNode.hpp  SesNode.hpp  SrcNode.hpp
app/audio_core/pipewire/: ControlBridge.hpp  Pw.cpp  Pw.hpp  PwNode.cpp  PwNode.hpp  PwStage.cpp  PwStage.hpp  abox_main.cpp
app/audio_core/pipewire/nodes/: aec_node.cpp  beamform_node.cpp  chanmix_node.cpp  ses_node.cpp  src_node.cpp
app/cloud_connector/: main.cpp
app/codec_hw/: main.cpp
app/gui_interface/: gui_main.cpp  gui_page.inc
app/llm_connector/: main.cpp
app/story_agent/: http_client.hpp  main.cpp
app/supervisor/: SessionFsm.cpp  SessionFsm.hpp  main.cpp
app/video_proc/: main.cpp
app/voice_trigger/: main.cpp
brain/: README.md  guardrails.md
brain/characters/: example-character.md
brain/memory/: MEMORY.md
brain/memory/semantic/: listener-profile.md
brain/memory/sessions/: .gitkeep
cmake/: aarch64-linux-gnu.toolchain.cmake  cortexa57.toolchain.cmake  rk3588.toolchain.cmake
common/: CMakeLists.txt
common/include/hermes/common/: AudioRing.hpp  CMsg.hpp  Catalog.hpp  EventMap.hpp  EventQueue.hpp  Log.h  ModuleId.hpp  MsgBus.hpp  PrerollRing.hpp  StoryMsg.hpp  Transport.hpp  WorkerPool.hpp
common/src/: MsgBus.cpp  Transport.cpp
data/stories/: example.md
docker/: Dockerfile
docs/: ARCHITECTURE.md  SVVR.md  TEST_REPORT.md  abox_pipewire.md  end_to_end_pipeline.md  memory_architecture.md
samples/: README.md
scripts/: _loopback_run.sh  build.sh  gen_samples.py  loopback.sh  run_gui.sh  run_loopback.sh  run_target.sh  run_voice.sh
services/memory/: README.md  requirements.txt  server.py
studio/: README.md  __init__.py  build_book.py  lexicon.py  requirements-optional.txt
studio/attribute/: __init__.py
studio/bundle/: __init__.py
studio/casting/: __init__.py
studio/contract/: __init__.py  validate.py
studio/emotion/: __init__.py
studio/ingest/: __init__.py  pdf.py
studio/knowledge/: __init__.py  llm.py
studio/nlp/: __init__.py
studio/samples/: lighthouse.txt
studio/tests/: test_knowledge.py  test_pdf_ingest.py  test_pipeline.py
test/: CMakeLists.txt
test/integration/: barge_in_e2e.cpp  kwd_wake_e2e.cpp
test/unit/common/: test_eventmap.cpp  test_msgbus.cpp
